Changelog
=========

0.6.0
-----
- Support native boolean type
- Fixed a bug with SQLAlchemy's custom AUTOCOMIT isolation level. If the user changed the isolation
  level from AUTOCOMMIT to something else, the dialect didn't notified the underlying database
  connection and it stayed in autocommit mode while the user expected the typical transaction
  behavior and the defined isolation level.

0.5.0
-----
- Improved support for ''SELECT FOR UPDATE'' statements.

0.4.0
-----
- Support for inspection of table oid
- Support for table comments
- Support for setting and reflecting isolation level

0.3.0
-----
- **Backward incompatible change:** The ``hana://`` DBURI schema will now use ``hdbcli`` by default.
- Support of Python 3
- Support for check constraints
- Support for foreign key options and name
- Support for tenant specification in connect URL and automatic sql port discovery
- Support for autocommit
- Support for temporary tables

0.2.2
-----
- Support of named constraints
- Reflection is now able to detect named constraints
- Fixed reflection of view columns with newer SAP HANA versions
- Allow construction of more complex SELECT FOR UPDATE statements
- Fixed bug with table argument hana_table_type that could lead to
  invalid CREATE TABLE statements
- Replace standard reserved words with SAP HANA reserved words in
  ``HANAIdentifierPreparer``

0.2.1
-----
- Fix LOB handling with hdbcli driver

0.2.0
-----
- Added basic support for hdbcli driver
- Allow specification of table type via ``hana_table_type``

0.1.2
-----
- Cleanup of setup.py
- Release on PyPi

0.1.0
-----
- Added support for LOBs


0.0.1
-----
- Initial version