@@ -8,6 +8,7 @@ Changelog
   level from AUTOCOMMIT to something else, the dialect didn't notified the underlying database
   connection and it stayed in autocommit mode while the user expected the typical transaction
   behavior and the defined isolation level.
+- Allow usage of "is_distinct_from" operator through a SAP HANA compatible expression.
 
 0.5.0
 -----
